--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -44,3 +44,9 @@ jobs:
     needs: analyze
 
     # Define steps to build and run the Docker container
+
+    steps:
+    - name: Build container
+      run: docker build -t go-web-server .
+    - name: Run container
+      run: docker run -p 8080:8080 -it --rm go-web-server
