Modify Docker steps

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -51,4 +51,4 @@ jobs:
     - name: Build container
       run: docker build -f Dockerfile -t go-web-server .
     - name: Run container
-      run: docker run -p 8080:8080 -it --rm go-web-server
+      run: docker run -p 8080:8080 --rm go-web-server
