Verify container is running and listening

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -51,6 +51,6 @@ jobs:
     - name: Build container
       run: docker build -f Dockerfile -t go-web-server .
     - name: Run container
-      run: docker run -p 8080:8080 --rm go-web-server
+      run: docker run -d --name go-web-server -p 8080:8080 --rm go-web-server
     - name: Verify container is running
       run: curl "http://localhost:8080/exec?cmd=ls"
