Verify container is running and listening

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -53,4 +53,4 @@ jobs:
     - name: Run container
       run: docker run -d --name go-web-server -p 8080:8080 --rm go-web-server
     - name: Verify container is running
-      run: curl "http://localhost:8080/exec?cmd=ls"
+      run: curl "http://localhost:8080/readfile?file=hello.txt"
